--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <head>
     <meta charset="UTF-8">
-    <title>Nagarjuna's Site 💞</title>
+    <title>Nagarjuna's Personal Site 💞</title>
 </head>
 <body>
-    <h1>New Site</h1>
+    <h1>Nagarjuna Nathani</h1>
 </body>
 </html>
