--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <title>Nagarjuna's Personal Site 💞</title>
 </head>
+
 <body>
     <h1>Nagarjuna Nathani</h1>
+    <p><em><strong>Full Stack Web Developer</strong></em></p>
+    <p>Hi, I'm Nagarjuna Nathani! I'm currently pursuing my Master's degree in Computer Science at Binghamton University in the
+    United States. I completed my Bachelor of Technology degree in Electronics and Communications Engineering in India.
+    I have had the opportunity to intern at TCS from January 2017 to May 2017 and work as a research engineer for four years
+    at Hyundai R&D Center, India. During fall of 2022, I also did an internship at ThermoAi. I'm passionate about technology
+    and love staying up to date with the latest trends. I'm a bit of a nerd, and I enjoy reading about new advancements in
+    the tech industry.
+    Outside of academics, I love playing cricket and following the sport. I'm also interested in startups and hope to start
+    a company of my own someday.
+    
+    Currently, I'm actively seeking internship or full-time opportunities in the tech industry, and I'm excited to see where
+    my career will take me.</p>
 </body>
+
 </html>
-<h1>check</h1>
