--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -19,6 +19,46 @@
     
     Currently, I'm actively seeking internship or full-time opportunities in the tech industry, and I'm excited to see where
     my career will take me.</p>
+    <hr>
+    <h2>Education</h2>
+    <ul>
+        <li><em><strong>Binghamton University, Binghamton, New York, United States of America (2022 - 2023)</strong></em>
+            <ul>
+                <br>
+                <li>Masters in Computer Science</li>
+                <br>
+                <li>GPA:3.7</li>
+            </ul>
+            <br>
+        </li> 
+        <li><em><strong>Jawaharlal Nehru Technological University, Kakinada, Andhra Pradesh, India (2013 - 2017)</strong></em> 
+            <ul>
+                <br>
+                <li>B.Tech in Electronics & Communications Engg.</li>
+                <br>
+                <li>Percentage: 75%</li>
+                <br>
+            </ul>
+            
+        </li>
+        <li><em><strong>Sri Chaitanya Junior College, Visakhapatnam, Andhra Pradesh, India (2011 - 2012)</strong></em>
+            <ul>
+                <br>
+                <li>Maths Physics Chemistry</li>
+                <br>
+                <li>Percentage: 94.5%</li>
+                <br>
+            </ul>
+        </li>
+        <li><em><strong>Periera English Nobel School (2004 - 2010)</strong></em>
+            <ul>
+                <br>
+                <li>Percentage: 95%</li>
+                <br>
+            </ul>
+        </li>
+    </ul>
+    <hr>
 </body>
 
 </html>
