contact me and hobbies pages created

--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -9,13 +9,13 @@
     <img src="images/Nagarjuna.png" alt="Nagarjuna profile pic" alt="Me" width="150" height="150">
     <h1>Nagarjuna Nathani </h1>
     <p><em><strong>Software Developer || Machine Learning Engineer || Full Stack Web Developer</strong></em></p>
-    <p>Hi, I'm Nagarjuna Nathani! I'm currently pursuing my Master's degree in Computer Science at Binghamton University
+    <p>Hi, I'm Nagarjuna Nathani! I'm currently pursuing my Master's degree in Computer Science at <a href="https://www.binghamton.edu/"target="_blank">Binghamton University</a> 
         in the
         United States. I completed my Bachelor of Technology degree in Electronics and Communications Engineering in
         India.
-        I have had the opportunity to intern at TCS from January 2017 to May 2017 and work as a research engineer for
+        I have had the opportunity to intern at <a href="https://www.tcs.com/"target="_blank">TCS</a> from January 2017 to May 2017 and work as a research engineer for
         four years
-        at Hyundai R&D Center, India. During fall of 2022, I also did an internship at ThermoAi. I'm passionate about
+        at <a href="https://hmie.in/"target="_blank">Hyundai R&D Center</a>, India. During fall of 2022, I also did an internship at <a href="https://thermoai.com/"target="_blank">ThermoAi</a>. I'm passionate about
         technology
         and love staying up to date with the latest trends. I'm a bit of a nerd, and I enjoy reading about new
         advancements in
@@ -64,23 +64,12 @@
             <ul>
                 <br>
                 <li>Percentage: 95%</li>
-                <br>
             </ul>
         </li>
     </ul>
-    <hr>
-    <h2>My Hobbies</h2>
-    <ol>
-        <li>Travelling</li>
-        <br>
-        <li>Reading Books</li>
-        <br>
-        <li>Cooking</li>
-        <br>
-        <li>Coding</li>
-    </ol>
-    
-
+    <h4><strong><a href="hobbies.html
+        ">My Hobbies</a></strong></h4>
+    <h4><strong><a href="contact_me.html
+        ">Contact Me</a></strong></h4>
 </body>
-
 </html>
