--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -6,16 +6,27 @@
 </head>
 
 <body>
-    <img src="images/Nagarjuna.png" alt="Nagarjuna profile pic" alt="Me" width="150" height="150">
-    <h1>Nagarjuna Nathani </h1>
-    <p><em><strong>Software Developer || Machine Learning Engineer || Full Stack Web Developer</strong></em></p>
-    <p>Hi, I'm Nagarjuna Nathani! I'm currently pursuing my Master's degree in Computer Science at <a href="https://www.binghamton.edu/"target="_blank">Binghamton University</a> 
+    <table cellspacing="20">
+        <tr>
+            <td><img src="images/Nagarjuna.png" alt="Nagarjuna profile pic" alt="Me" width="150" height="150"></td>
+            <td>
+                <h1>Nagarjuna Nathani</h1>
+                <p><em><strong>Software Developer || Machine Learning Engineer || Full Stack Web Developer</strong></em>
+                </p>
+            </td>
+        </tr>
+    </table>
+
+    <p>Hi, I'm Nagarjuna Nathani! I'm currently pursuing my Master's degree in Computer Science at <a
+            href="https://www.binghamton.edu/" target="_blank">Binghamton University</a>
         in the
         United States. I completed my Bachelor of Technology degree in Electronics and Communications Engineering in
         India.
-        I have had the opportunity to intern at <a href="https://www.tcs.com/"target="_blank">TCS</a> from January 2017 to May 2017 and work as a research engineer for
+        I have had the opportunity to intern at <a href="https://www.tcs.com/" target="_blank">TCS</a> from January 2017
+        to May 2017 and work as a research engineer for
         four years
-        at <a href="https://hmie.in/"target="_blank">Hyundai R&D Center</a>, India. During fall of 2022, I also did an internship at <a href="https://thermoai.com/"target="_blank">ThermoAi</a>. I'm passionate about
+        at <a href="https://hmie.in/" target="_blank">Hyundai R&D Center</a>, India. During fall of 2022, I also did an
+        internship at <a href="https://thermoai.com/" target="_blank">ThermoAi</a>. I'm passionate about
         technology
         and love staying up to date with the latest trends. I'm a bit of a nerd, and I enjoy reading about new
         advancements in
@@ -67,9 +78,82 @@
             </ul>
         </li>
     </ul>
+
+    <hr>
+    <h2>Work Experience</h2>
+    <table cellspacing="5">
+        <thead>
+            <tr>
+                <th>Company Name</th>
+                <th>Role</th>
+                <th>Years</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>ThermoAi</td>
+                <td>Software Dev. Intern</td>
+                <td> 08/2022 - 12/2022</td>
+            </tr>
+            <tr>
+                <td>Hyundai R&D</td>
+                <td>Research Engineer</td>
+                <td>8/2017 - 8/2021</td>
+            </tr>
+            <tr>
+                <td>TCS</td>
+                <td>Intern</td>
+                <td>01/2017 - 05/2017</td>
+            </tr>
+        </tbody>
+        <tfoot>
+        </tfoot>
+    </table>
+    <h2>Skills</h2>
+    <table cellspacing="10">
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <td>Web Developer</td>
+                        <td>★★★★★</td>
+                    </tr>
+                    <tr>
+                        <td>Machine Learning</td>
+                        <td>★★★★★</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>Software Development</td>
+                        <td>★★★★★</td>
+                    </tr>
+                    <tr>
+                        <td>Photography</td>
+                        <td>★★☆☆☆</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>Data Analysis</td>
+                        <td>★★★★★</td>
+                    </tr>
+                    <tr>
+                        <td>Cooking</td>
+                        <td>★★☆☆☆</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <hr>
     <h4><strong><a href="hobbies.html
-        ">My Hobbies</a></strong></h4>
-    <h4><strong><a href="contact_me.html
-        ">Contact Me</a></strong></h4>
+                ">My Hobbies</a> &nbsp; &nbsp;<a href="contact_me.html
+                        ">Contact Me</a></strong></h4>
 </body>
+
 </html>
