--- a/1. HTML - Personal Site/contact_me.html
+++ b/1. HTML - Personal Site/contact_me.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me 📞</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h2>Contact Me</h2>
@@ -15,7 +16,7 @@
     <form action="mailto:nagarjunanathani96@gmail.com" method = "post" enctype="text/plain">
     <label for="Username">Your Name:</label>
     <input type="text" name="yourName" ><br>
-    <label for="email">Enter your email: </label>
+    <label for="email">Your Email: </label>
     <input type="email" name="your email" ><br>
     <label for="message">Your Message:</label><br>
     <textarea name="your message"  cols="30" rows="10"></textarea><br>
