--- a/1. HTML - Personal Site/index.html
+++ b/1. HTML - Personal Site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nagarjuna's Personal Site 💞</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
