--- a/3. Bootstrap/TinDog website/index.html
+++ b/3. Bootstrap/TinDog website/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Download</a>
+              <a class="nav-link" href="#">Download</a>
             </li>
           </ul>
         </div>
@@ -52,8 +52,10 @@
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg downloadbtn"> <i class="fa-brands fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg downloadbtn"> <i class="fa-brands fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn-lg downloadbtn"> <i class="fa-brands fa-apple"></i>
+            Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg downloadbtn"> <i
+              class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -67,85 +69,129 @@
   <!-- Features -->
 
   <section id="features">
-      <div class="row features-row">
-        <div class="col-lg-4 individual-features">
-          <i class="fa-solid fa-circle-check fa-4x icons"></i>
-          <h3 class="feature-headings">Easy to use.</h3>
-          <p class="feature-paras">So easy to use, even your dog could do it.</p>
-        </div>
-        <div class="col-lg-4 individual-features">
-          <i class="fa-solid fa-bullseye fa-4x icons"></i>
-          <h3 class="feature-headings">Elite Clientele</h3>
-          <p class="feature-paras">We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="col-lg-4 individual-features">
-          <i class="fa-solid fa-heart fa-4x icons"></i>
-          <h3 class="feature-headings">Guaranteed to work.</h3>
-          <p class="feature-paras">Find the love of your dog's life or your money back.</p>
-        </div>
+    <div class="row features-row">
+      <div class="col-lg-4 individual-features">
+        <i class="fa-solid fa-circle-check fa-4x icons"></i>
+        <h3 class="feature-headings">Easy to use.</h3>
+        <p class="feature-paras">So easy to use, even your dog could do it.</p>
       </div>
+      <div class="col-lg-4 individual-features">
+        <i class="fa-solid fa-bullseye fa-4x icons"></i>
+        <h3 class="feature-headings">Elite Clientele</h3>
+        <p class="feature-paras">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4 individual-features">
+        <i class="fa-solid fa-heart fa-4x icons"></i>
+        <h3 class="feature-headings">Guaranteed to work.</h3>
+        <p class="feature-paras">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
   </section>
 
 
   <!-- Testimonials -->
-
   <section id="testimonials">
-
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    <div id="user-reviews" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active ">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em style="font-weight: 500;">Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+            their life.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em style="font-weight: 500;">Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#user-reviews" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#user-reviews" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </section>
 
 
   <!-- Press -->
 
+
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
 
   <!-- Pricing -->
+<section id="pricing">
+  <div class="container py-3">
+    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+      <h1 class="display-4 fw-normal">A Plan for Every Dog's Needs</h1>
+      <p class="fs-5 text-body-secondary">Simple and affordable price plans for you and your dog.</p>
+    </div>
 
-  <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-  </section>
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm ">
+          <div class="card-header py-3 card-top">
+            <h4 class="my-0 fw-normal">Chihuahua</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">Free<small class="text-body-secondary fw-light"></small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>5 Matches Per Day</li>
+              <li>10 Messages Per Day</li>
+              <li>Unlimited App Usage</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg custom_button">Sign Up for free</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 card-top">
+            <h4 class="my-0 fw-normal">Labrador</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$49<small class="text-body-secondary fw-light">/mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg custom_button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3 card-top">
+            <h4 class="my-0 fw-normal">Mastiff</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$99<small class="text-body-secondary fw-light">/mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Prioroty access</li>
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg custom_button">Sign up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
   <!-- Call to Action -->
