Tindog website complete

--- a/3. Bootstrap/TinDog website/index.html
+++ b/3. Bootstrap/TinDog website/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <section id="title">
+  <section class= "coloured-section" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -51,7 +51,7 @@
       <!-- Title --> 
       <div class="row new">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg downloadbtn"> <i class="fa-brands fa-apple"></i>
             Download</button>
           <button type="button" class="btn btn-outline-light btn-lg downloadbtn"> <i
@@ -66,21 +66,21 @@
   </section>
 
   <!-- Features -->
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="row features-row">
       <div class="col-lg-4 individual-features">
         <i class="fa-solid fa-circle-check fa-4x icons"></i>
-        <h3 class="feature-headings">Easy to use.</h3>
+        <h3 class="feature-titles">Easy to use.</h3>
         <p class="feature-paras">So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-lg-4 individual-features">
         <i class="fa-solid fa-bullseye fa-4x icons"></i>
-        <h3 class="feature-headings">Elite Clientele</h3>
+        <h3 class="feature-titles">Elite Clientele</h3>
         <p class="feature-paras">We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-lg-4 individual-features">
         <i class="fa-solid fa-heart fa-4x icons"></i>
-        <h3 class="feature-headings">Guaranteed to work.</h3>
+        <h3 class="feature-titles">Guaranteed to work.</h3>
         <p class="feature-paras">Find the love of your dog's life or your money back.</p>
       </div>
     </div>
@@ -88,16 +88,16 @@
 
 
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section class= "coloured-section" id="testimonials">
     <div id="user-reviews" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active ">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-quotes">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em style="font-weight: 500;">Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+          <h2 class="testimonial-quotes">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em style="font-weight: 500;">Beverly, Illinois</em>
@@ -118,7 +118,7 @@
   <!-- Press -->
 
 
-  <section id="press">
+  <section class= "coloured-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -128,20 +128,20 @@
 
 
   <!-- Pricing -->
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     <div class="container py-3">
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">A Plan for Every Dog's Needs</h1>
+        <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
         <p class="fs-5 text-body-secondary">Simple and affordable price plans for you and your dog.</p>
       </div>
       <div class="row mb-3 text-center">
         <div class="col-lg-4 col-md-6">
           <div class="card mb-4 rounded-3 shadow-sm ">
             <div class="card-header py-3 card-top">
-              <h4 class="my-0 fw-normal">Chihuahua</h4>
+              <h4 class="my-0">Chihuahua</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">Free<small class="text-body-secondary fw-light"></small></h1>
+              <h1 class="card-title pricing-card-title big-heading">Free<small class="text-body-secondary fw-light"></small></h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>5 Matches Per Day</li>
                 <li>10 Messages Per Day</li>
@@ -158,7 +158,7 @@
               <h4 class="my-0 fw-normal">Labrador</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$49<small class="text-body-secondary fw-light">/mo</small>
+              <h1 class=" card-title pricing-card-title big-heading">$49<small class="text-body-secondary fw-light">/mo</small>
               </h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Unlimited Matches</li>
@@ -176,7 +176,7 @@
               <h4 class="my-0 fw-normal">Mastiff</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$99<small class="text-body-secondary fw-light">/mo</small>
+              <h1 class=" card-title pricing-card-title big-heading">$99<small class="text-body-secondary fw-light">/mo</small>
               </h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Prioroty access</li>
@@ -195,7 +195,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class= "coloured-section" id="cta">
     <h3 class="cta-font">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg downloadbtn2"> <i class="fa-brands fa-apple"></i>
       Download</button>
@@ -206,7 +206,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <i class="fa-brands fa-twitter footer-icons"></i>
     <i class="fa-brands fa-facebook-f footer-icons"></i>
     <i class="fa-brands fa-instagram footer-icons"></i>
